# json-data-encoding

./: .ocamlformat  dune-project  json-data-encoding-browser.opam  json-data-encoding-bson.opam  json-data-encoding.opam
.github/workflows/: workflow.yml
examples/: dune
src/: json_encoding.ml  json_encoding.mli  json_query.mli  json_repr.ml  json_repr.mli  json_repr_browser.mli  json_repr_bson.mli  json_schema.ml  json_schema.mli  list_map.mli
test/: dune  test_generated.ml  test_mu.ml
test-bson/: dune  test_bson_relaxation.ml
