opam-version: "2.0"
name: "json-data-encoding-browser"
synopsis: "Type-safe encoding to and decoding from JSON (browser support)"
maintainer: "pierre.boutillier@laposte.net"
authors: [ "Nomadic Labs" "Ocamlpro" ]
homepage: "https://gitlab.com/pirbo/json-data-encoding"
bug-reports: "https://gitlab.com/pirbo/json-data-encoding/issues"
license: "MIT"
dev-repo: "git+https://gitlab.com/pirbo/json-data-encoding"

build: [
  ["dune" "build" "-j" jobs "-p" name]
]

depends: [
  "ocaml" {>= "4.10"}
  "dune" {>= "2.0"}
  "json-data-encoding" {= version }
  "js_of_ocaml" {>= "3.3.0"}
]
