opam-version: "2.0"
name: "json-data-encoding"
synopsis: "Type-safe encoding to and decoding from JSON"
maintainer: "pierre.boutillier@laposte.net"
authors: [ "Nomadic Labs" "Ocamlpro" ]
homepage: "https://gitlab.com/pirbo/json-data-encoding"
bug-reports: "https://gitlab.com/pirbo/json-data-encoding/issues"
license: "MIT"
dev-repo: "git+https://gitlab.com/pirbo/json-data-encoding"

build: [
  ["dune" "build" "-j" jobs "-p" name]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.10"}
  "dune" {>= "2.0"}
  "uri" {>= "1.9.0" }
  "hex" {>= "1.3.0"}
  "crowbar" { with-test }
  "alcotest" { with-test }
  "ocamlformat" { = "0.27.0" & dev }
  "odoc" { with-doc }
]
