(tests
 (names test_generated test_big_streaming test_list_map test_seq_is_lazy)
 (modes exe js)
 (libraries json-data-encoding crowbar)
 (package json-data-encoding))

(executable
 (name test_mu)
 (libraries json-data-encoding alcotest)
 (modes exe js))

(rule
 (alias runtest)
 (enabled_if
  (<> %{os_type} "Win32"))
 (package json-data-encoding)
 (action
  (run node %{dep:./test_mu.bc.js})))

(rule
 (alias runtest)
 (package json-data-encoding)
 (action
  (run %{dep:./test_mu.exe})))
