(tests
 (names test_generated test_big_streaming test_list_map test_seq_is_lazy)
 (modules test_generated test_big_streaming test_list_map test_seq_is_lazy)
 (modes exe js)
 (libraries json-data-encoding.stdlib json-data-encoding crowbar)
 (package json-data-encoding))

(executables
 (names test_mu test_destruct)
 (modules test_mu test_destruct)
 (libraries json-data-encoding alcotest)
 (modes exe js))

(rule
 (alias runtest)
 (enabled_if
  (<> %{os_type} "Win32"))
 (package json-data-encoding)
 (action
  (run node %{dep:./test_mu.bc.js})))

(rule
 (alias runtest)
 (package json-data-encoding)
 (action
  (run %{dep:./test_mu.exe})))

(rule
 (alias runtest)
 (enabled_if
  (<> %{os_type} "Win32"))
 (package json-data-encoding)
 (action
  (run node %{dep:./test_destruct.bc.js})))

(rule
 (alias runtest)
 (package json-data-encoding)
 (action
  (run %{dep:./test_destruct.exe})))
